--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -17,8 +17,7 @@ env:
   TASK_DEFINITION: myapp-task
   AWS_CREDS: ${{secrets.AWS_ACTION_ROLE}}
   AWS_REGION: ${{secrets.AWS_REGION}}
-  IMAGE_TAG: ${{ github.sha }}
-
+  
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -48,6 +47,13 @@ jobs:
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         echo "image=$ECR_REGISTRY/ECR_REGISTRY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+
+#Get image URL
+    - name: set image URI
+      id: set-image
+      run: |
+        echo "IMAGE_URI=${{ steps.build-and-push.output.image }}" >> $GITHUB_ENV
+
 
 #Add trivy scan 
     - name: scan Docker image with trivy
