--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -59,7 +59,7 @@ jobs:
     - name: scan Docker image with trivy
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: ${{ steps.build-image.output.image }}
+        image-ref: ${{ steps.build-and-push.outputs.image }}
         format: 'table'
         exit-code: '1' # fail the build if vulnerabilities are found
         severity: 'CRITICAL,HIGH' #ONLY FAIL FOR CRITICAL/HIGH VULNERABILITIES
