--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -76,6 +76,13 @@ jobs:
 
     - name: Update task definition
       run: |
+          # Install jq if needed
+          sudo apt-get install -y jq
+          
+          # Verify image URI is correct
+          echo "Using image URI: ${{ steps.build-and-push.outputs.image }}"
+          
+          # Update the correct container by name
           jq --arg IMAGE_URI "${{ steps.build-and-push.outputs.image }}" \
             --arg CONTAINER_NAME "${{ env.CONTAINER_NAME }}" \
             '.containerDefinitions |= map(if .name == $CONTAINER_NAME then .image = $IMAGE_URI else . end) |
