--- a/.github/workflows/cicd2.yml
+++ b/.github/workflows/cicd2.yml
@@ -17,6 +17,7 @@ env:
   TASK_DEFINITION: myapp-task
   AWS_CREDS: ${{secrets.AWS_ACTION_ROLE}}
   AWS_REGION: ${{secrets.AWS_REGION}}
+  IMAGE_TAG: ${{ github.run_number }}
     
 
 jobs:
