--- a/.github/workflows/cicd2.yml
+++ b/.github/workflows/cicd2.yml
@@ -120,7 +120,7 @@ jobs:
       - name: AWS Creds Config 
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ env.AWS_ROLE }}
+          role-to-assume: ${{ env.AWS_CREDS }}
           aws-region: ${{ env.AWS_REGION }}
       
       - name: Download current task definition
